--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
   <artifactId>ensembl-mart-runner</artifactId>
   <packaging>jar</packaging>
   <name>Ensembl Mart runner</name>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <description>Ensembl Mart runner.</description>
   <url>https://github.com/heuermh/ensembl-mart-runner</url>
   <inceptionYear>2021</inceptionYear>
@@ -40,7 +40,7 @@
     <connection>scm:git:git@github.com:heuermh/ensembl-mart-runner.git</connection>
     <developerConnection>scm:git:git@github.com:heuermh/ensembl-mart-runner.git</developerConnection>
     <url>git@github.com:heuermh/ensembl-mart-runner.git</url>
-    <tag>ensembl-mart-runner-1.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>GitHub</system>
